Worked on by allocation type chart second nav horizontal scroll issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1622,6 +1622,6 @@ a.video-tutorial{color:#333;}
   dominant-baseline: middle;
 }
 
-#bycerf-bar-chart, #bycbpf-bar-chart {
+/*#bycerf-bar-chart, #bycbpf-bar-chart {
   overflow-y: hidden;
-}
+}*/
